--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,21 @@
                 <p class="hero-subtitle">
                     Led accessibility research for NISRA's website, identifying barriers for visually impaired users and recommending solutions that increased program sign-ups by 20%.
                 </p>
+                
                 <div class="stats-row">
+                    <img 
+  src="https://imgur.com/a/eaMHPVs"
+  alt="NISRA website accessibility redesign mockup"
+  style="
+    width: 100%;
+    max-width: 520px;
+    display: block;
+    margin: 2.5rem auto;
+    border-radius: 18px;
+    border: 1px solid rgba(255,255,255,0.08);
+    box-shadow: 0 25px 50px rgba(0,0,0,0.45);
+  "
+>
                     <div class="stat-item">
                         <span class="stat-value">+20%</span>
                         <span class="stat-label">Sign-up Increase</span>
