--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
                     Led accessibility research for NISRA's website, identifying barriers for visually impaired users and recommending solutions that increased program sign-ups by 20%.
                 </p>
                  <img 
-  src="https://imgur.com/a/eaMHPVs"
+  src="https://iili.io/feuVNFp.png"
   alt="NISRA website accessibility redesign mockup"
   style="
     width: 100%;
