--- a/index.html
+++ b/index.html
@@ -1603,13 +1603,4 @@
         animateCards();
     </script>
 </body>
-</html> i want to add a mockup image  on the first page Improving Web Accessibility
-Through UX Research
-Led accessibility research for NISRA's website, identifying barriers for visually impaired users and recommending solutions that increased program sign-ups by 20%.
-
-+20%
-SIGN-UP INCREASE
-85%
-EASIER TO USE
-100% here is the img https://iili.io/feuVNFp.png 
-WCAG 2.0 AA on the right of it how can i add an image url . complete
+</html>
